--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-  <title>React App</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
+  <title>Recipes App</title>
 </head>
 
 <body>
